Prepare for deployment: Added environment variables for API URL and updated CORS configuration